# project-atomina

./: '  .clang-format  .gitignore  .gitmessage  .gitmodules  CMakeLists.txt  CMakePresets.json  CppProperties.json  LICENSE  README.md  project-atomina.sln  run-test.sh  vcpkg.json
atomina-game/: CMakeLists.txt  GameApp.cpp  GameApp.h  GameApp.hpp  GameEnums.hpp  GameEventType.hpp  GameState.h  GameState.hpp  GameStateType.hpp  LobbyState.hpp  MainMenuState.hpp  PlayState.hpp  ServerApp.cpp  ServerApp.hpp  SysFly.hpp  atomina-game.vcxproj  atomina-game.vcxproj.filters  atominamixin.h  blah.h
atomina-game/OAS/: AttrConnection.hpp  AttrTimer.hpp  SysConnection.hpp  SysTime.hpp
atomina-game/state/: LobbyState.hpp  MainMenuState.hpp  PlayState.hpp  ServerState.hpp
atomina-shared/: CMakeLists.txt  GameState.hpp  atomina.hpp  pch.cpp  pch.hpp
atomina-shared/GUI/: AppWindow.cpp  AppWindow.hpp  KeyCode.hpp  Window.cpp  Window.hpp  WindowEvent.cpp  WindowEvent.hpp
atomina-shared/GUI/window/: WindowGLFWImpl.cpp  WindowGLFWImpl.hpp  WindowUnixImpl.cpp  WindowUnixImpl.hpp  WindowWinImpl.cpp  WindowWinImpl.hpp
atomina-shared/OAS/: AttrBase.cpp  AttrBase.hpp  Attribute.hpp  ObjectManager.cpp  ObjectManager.hpp  SysBase.cpp  SysBase.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp
atomina-shared/OAS/attributes/: AttrAnimatable.cpp  AttrAnimatable.hpp  AttrAnimation.cpp  AttrAnimation.hpp  AttrCollidable.cpp  (+27 more)
atomina-shared/core/: ATMAContext.cpp  ATMAContext.hpp  ATMAFormats.cpp  ATMAFormats.hpp  Entry.cpp  Entry.hpp  Game.cpp  Game.hpp  Server.cpp  Server.hpp  api.hpp
atomina-shared/event/: Binding.hpp  CallBackKey.cpp  CallBackKey.hpp  Event.hpp  EventContext.hpp  EventManager.cpp  EventManager.hpp  ObjectEvent.hpp  ObjectEventContext.cpp  ObjectEventContext.hpp  ObjectEventListener.hpp  WindowEvent.cpp  WindowEvent.hpp
atomina-shared/file/: FileFuncs.cpp  FileFuncs.hpp  FileHandler.cpp  FileHandler.hpp
atomina-shared/graphics/: AnimBase.cpp  AnimBase.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Window.cpp  Window.hpp
atomina-shared/math/: Mat3.hpp  MathFuncs.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Stadium.hpp  Vec2.hpp  Vec3.hpp
atomina-shared/message/: Communicator.cpp  Communicator.hpp  MessageHandler.cpp  MessageHandler.hpp  Observer.hpp
atomina-shared/network/: NetworkClient.cpp  NetworkClient.hpp  NetworkHost.cpp  NetworkHost.hpp  NetworkManager.cpp  NetworkManager.hpp  NetworkMessage.hpp  NetworkMessageListener.hpp  NetworkMessageTypes.hpp  NetworkSerde.cpp  NetworkSerde.hpp  Socket.cpp  Socket.hpp  SocketListener.cpp  SocketListener.hpp  URL.cpp  URL.hpp
atomina-shared/os/: OSContextWinImpl.cpp  OSContextWinImpl.hpp
atomina-shared/render/: Buffer.cpp  Buffer.hpp  GLBuffer.cpp  GLBuffer.hpp  GLCamera.cpp  GLCamera.hpp  GLContext.hpp  GLProgram.cpp  GLProgram.hpp  GLRenderContext.cpp  GLRenderContext.hpp  GLRenderable.cpp  GLRenderable.hpp  GLRenderer.cpp  GLRenderer.hpp  GLShader.cpp  GLShader.hpp  GLSprite.cpp  GLSprite.hpp  GLText.cpp  GLText.hpp  GLTexture.cpp  GLTexture.hpp  RenderContext.cpp  RenderContext.hpp  ShaderBinding.cpp  ShaderBinding.hpp  ShaderProgram.cpp  ShaderProgram.hpp  TextureBinding.cpp  TextureBinding.hpp
atomina-shared/resource/: DummyResource.cpp  DummyResource.hpp  Resource.cpp  Resource.hpp  ResourceEnum.hpp  ResourceLoader.hpp  ResourceManager.hpp
atomina-shared/shader/: defaultFrag.shader  defaultVertex.shader  testFrag.shader  testVertex.shader
atomina-shared/sound/: AudioChannel.cpp  AudioChannel.hpp  AudioManager.cpp  AudioManager.hpp  AudioWave.cpp  AudioWave.hpp  AuidoManager.cpp  SoundManager.cpp  SoundManager.hpp  SoundProperties.hpp
atomina-shared/state/: BaseState.cpp  BaseState.hpp  State.hpp  StateManager.cpp  StateManager.hpp  StateSensitive.hpp
atomina-shared/time/: Clock.cpp  Clock.hpp  StopWatch.cpp  StopWatch.hpp
atomina-shared/util/: ATConst.hpp  AtominaException.hpp  Log.cpp  Log.hpp  Path.cpp  Path.hpp  Props.cpp  Props.hpp  RetryExecutor.cpp  RetryExecutor.hpp  Worker.cpp  Worker.hpp
atomina-test/: AtominaTest.cpp  AtominaTest.hpp  AtominaTestGame.cpp  AtominaTestServer.cpp  AtominaTestServer.hpp  CMakeLists.txt  EventDispatcherTest.cpp  EventManagerTest.cpp  FileTest.cpp  MathUtilTest.cpp  NetworkTest.cpp  ObjectManagerTest.cpp  RandomGeneratorTest.cpp  StateManagerTest.cpp  SysUtilTest.cpp  SystemManagerTest.cpp  TestMixin.h  TestState.h  TestSystem.h  VecTest.cpp  atomina-test.cpp  atomina-test.vcxproj  atomina-test.vcxproj.filters
atomina-test/OAS/: AttributeFixtures.hpp  AttributeTestSuite.cpp  AttributeTestSuite.hpp  SystemFixtures.hpp  SystemTestSuite.cpp  SystemTestSuite.hpp  TestAttribute.cpp  TestAttribute.hpp  TestSystem.cpp  TestSystem.hpp
atomina-test/core/: GameTestSuite.cpp  GameTestSuite.hpp
atomina-test/event/: EventFixture.cpp  EventFixture.hpp  EventFixtures.hpp  EventTestSuite.cpp  EventTestSuite.hpp  ObjectEventSuite.cpp  ObjectEventSuite.hpp  WindowEventSuite.cpp  WindowEventSuite.hpp
atomina-test/math/: Mat3Suite.cpp  Mat3Suite.hpp  MatFixtures.hpp  MathTestFixtures.hpp  MathTestSuite.cpp  MathTestSuite.hpp  RandomGeneratorTestSuite.cpp  RandomGeneratorTestSuite.hpp  StadiumFixtures.hpp  StadiumSuite.cpp  StadiumSuite.hpp  Vec2Suite.cpp  Vec2Suite.hpp  Vec3Suite.cpp  Vec3Suite.hpp  VecFixtures.hpp
atomina-test/network/: NetworkAttribute.cpp  NetworkAttribute.hpp  NetworkFixture.hpp  NetworkManagerFixture.hpp  NetworkManagerTestSuite.cpp  NetworkManagerTestSuite.hpp  NetworkMessageFixture.hpp  NetworkMessageTestSuite.cpp  NetworkMessageTestSuite.hpp  NetworkSystem.cpp  NetworkSystem.hpp  NetworkTestSuite.cpp  NetworkTestSuite.hpp
atomina-test/resource/: ResourceFixtures.hpp  ResourceTestSuite.cpp  ResourceTestSuite.hpp
atomina-test/state/: StateFixtures.cpp  StateFixtures.hpp  StateTestSuite.cpp  StateTestSuite.hpp  TestState.cpp  TestState.hpp
atomina-test/time/: ClockTestSuite.cpp  StopWatchTestSuite.cpp  StopWatchTestSuite.hpp
atomina-test/util/: LogFixture.cpp  LogFixture.hpp  LogTest.cpp  LogTest.hpp  PathTest.cpp  PropsTest.cpp  PropsTest.hpp
(+222 files in other folders)
